# wxparser

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
demo/: .env.example  README.md  wx.sh
deploy/: agc.py  audit_data.py  auto_deploy.sh  backfill_almanac.py  backfill_raw_reports.py  fix_city_spellings.py  fix_classify.py  fix_precip.py  fix_stt_terms.py  install.sh  propose_corrections.py  prune_stale_readings.py  reprocess.sh  revote_forecast.py  setup-postgres-debian.sh  setup-postgres.sh  wxparser-agc.service  wxparser-agc.timer  wxparser-api.service  wxparser-deploy.service  wxparser-deploy.timer  wxparser-fixspelling.service  wxparser-fixspelling.timer  wxparser-fixterms.service  wxparser-fixterms.timer  wxparser-prune.service  wxparser-prune.timer  wxparser-reprocess.service  wxparser-reprocess.timer  wxparser.service
docs/: DEPLOY.md  DEVELOPMENT.md  PLAN.md  PORTING.md  USAGE.md
tests/: conftest.py  test_api.py  test_branches.py  test_capture.py  test_db.py  test_dedup.py  test_edges.py  test_enhance.py  test_extract.py  test_fingerprint.py  test_formats.py  test_health.py  test_main.py  test_notify.py  test_pipeline.py  test_profile.py  test_reprocess.py  test_same.py  test_segment.py  test_store.py  test_stt.py  test_trust.py  test_verify.py
wxparser/: __init__.py  api.py  capture.py  config.py  db.py  dedup.py  enhance.py  extract.py  fingerprint.py  formats.py  health.py  main.py  pipeline.py  profile.py  reprocess.py  same.py  segment.py  store.py  stt.py  timefmt.py  trust.py  verify.py
wxparser/data/: place_names.py  same_events.py  stt_terms.py
wxparser/profiles/: kjy93_muncie.json
