[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wxparser"
version = "1.0.0"
description = "Fully-offline local weather server: NOAA Weather Radio capture, whisper.cpp transcription, SAME/EAS alert decoding, and a structured weather query API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
# Audio capture is the `arecord` subprocess (process boundary, honours PLAN §2.2)
# and STT is the whisper.cpp `whisper-cli` subprocess. In-process deps:
#  - numpy (BSD): Phase 2 VAD + spectral fingerprint / novelty gate
#  - pg8000 (BSD): pure-Python PostgreSQL driver — chosen over psycopg (LGPL) so
#    nothing copyleft is imported (§2.2). PostgreSQL itself runs locally (§2.1).
dependencies = ["numpy>=1.24", "pg8000>=1.31"]

[project.optional-dependencies]
test = ["pytest>=7", "coverage>=7"]

[project.scripts]
wxparser = "wxparser.main:main"
wxparser-api = "wxparser.api:main"

[tool.setuptools]
packages = ["wxparser"]
