[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wxparser"
version = "1.0.2"
description = "Fully-offline local weather server: NOAA Weather Radio capture, whisper.cpp transcription, SAME/EAS alert decoding, and a structured weather query API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"  # matches the CI matrix; older floors were never tested
# Audio capture is the `arecord` subprocess (process boundary, honours PLAN §2.2)
# and STT is the whisper.cpp `whisper-cli` subprocess. In-process deps:
#  - numpy (BSD): Phase 2 VAD + spectral fingerprint / novelty gate
#  - pg8000 (BSD): pure-Python PostgreSQL driver — chosen over psycopg (LGPL) so
#    nothing copyleft is imported (§2.2). PostgreSQL itself runs locally (§2.1).
dependencies = ["numpy>=1.24", "pg8000>=1.31"]

[project.optional-dependencies]
test = ["pytest>=7", "coverage>=7"]

[project.scripts]
wxparser = "wxparser.main:main"
wxparser-api = "wxparser.api:main"

[tool.setuptools]
# wxparser.data is a real subpackage; profiles/ and the bundled lookup JSONs
# are runtime-required data — without these a `pip install .` produced a
# package that crashed on import (profile.load / fips lookups).
packages = ["wxparser", "wxparser.data"]

[tool.setuptools.package-data]
wxparser = ["profiles/*.json", "profiles/README.md"]
"wxparser.data" = ["*.json"]

[tool.ruff.lint]
# Gate on fatal errors only (syntax, undefined names) — the 100% line+branch
# test gate does the heavy lifting. The E702/E402-style compound statements
# and grouped imports a default ruff run flags are accepted house style, not
# regressions; this config makes a plain `ruff check .` say so.
select = ["E9", "F63", "F7", "F82"]
