[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wxparser"
version = "1.0.7"
description = "Fully-offline local weather server: NOAA Weather Radio capture, whisper.cpp transcription, SAME/EAS alert decoding, and a structured weather query API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"  # matches the CI matrix; older floors were never tested
# Audio capture is the `arecord` subprocess (process boundary, honours PLAN §2.2)
# and STT is the whisper.cpp `whisper-cli` subprocess. In-process deps:
#  - numpy (BSD): Phase 2 VAD + spectral fingerprint / novelty gate
#  - pg8000 (BSD): pure-Python PostgreSQL driver — chosen over psycopg (LGPL) so
#    nothing copyleft is imported (§2.2). PostgreSQL itself runs locally (§2.1).
dependencies = ["numpy>=1.24", "pg8000>=1.31"]

[project.optional-dependencies]
test = ["pytest>=7", "coverage>=7"]

[project.scripts]
wxparser = "wxparser.main:main"
wxparser-api = "wxparser.api:main"

[tool.setuptools]
# wxparser.data is a real subpackage; profiles/ and the bundled lookup JSONs
# are runtime-required data — without these a `pip install .` produced a
# package that crashed on import (profile.load / fips lookups).
packages = ["wxparser", "wxparser.data"]

[tool.setuptools.package-data]
wxparser = ["profiles/*.json", "profiles/README.md"]
"wxparser.data" = ["*.json"]

[tool.ruff]
# The written line-length policy (PEP 8's sanctioned team allowance is "up to
# 99"). Comments are deliberately NOT held to PEP 8's 72-char proviso: the
# dated field-evidence annotation style is this project's documentation of
# record and rewrapping it buys nothing.
line-length = 99

[tool.ruff.lint]
# Full pycodestyle E/W plus the fatal F-classes; the 100% line+branch test
# gate still does the correctness heavy lifting. Two deviations are accepted
# house style, not regressions:
#   E702 — the paired `where += ...; params[...] = ...` build-clause/bind-param
#          idiom (db.py) and similar one-logical-move compounds
#   E402 — deploy scripts must bootstrap sys.path before importing the package
select = ["E", "W", "F63", "F7", "F82"]
ignore = ["E702", "E402"]
